# App_captone_phase2

./: .gitignore  .gitmodules  README.md  pyproject.toml
.github/workflows/: sandbox-simulator.yaml
Xbrain_fake_data/docs/: 02_infra_design.md  04_deployment_design.md  07_test_eval_report.md  09_infrastructure_resources_scenarios.md  10_pipeline_workflow.md
Xbrain_fake_data/fake-data/: README.md
Xbrain_fake_data/scripts/: test_sandbox_alert.py
Xbrain_fake_data_new/docs/: 02_infra_design.md  03_security_design.md  04_deployment_design.md  05_cost_analysis.md  08_adrs.md
Xbrain_fake_data_new/infra/: README.md
apps/ai-engine/: W11_contract_scoring.html  handoff-2.txt  model_selection_for_aiops_triage.md
apps/ingest-lambda/: index.py
apps/platform-service/: .gitignore
apps/simulator/: config.py  main.py
dashboard/: package-lock.json  package.json  vite.config.ts
dat/: README.md
dat/scratch/: check_prometheus_config.py  check_targets.py  inject_telemetry_5xx.py  inject_telemetry_oomkilled.py  test_real_dispatch.py
dat/scripts/: test_inject_scenario_1.py  test_inject_scenario_4.py  test_inject_scenario_5.py
dat/tests/: conftest.py  test_evidence_builder.py  test_fake_data_pack.py
data/: README.md
docs/: 01_requirements_analysis.md  02_infra_design.md  03_security_design.md  04_deployment_design.md  05_cost_analysis.md  08_adrs.md
fake-data/correlator-input/: 12_missing_metadata.json
infra/: README.md
scripts/: test_inject_simulator.py  test_sandbox_alert.py
src/cdo_correlator/: __init__.py  (+2 more)
tests/: test_correlator.py  test_ingest.py
(+493 files in other folders)
