[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "cdo-ingest"
version = "0.1.0"
description = "CDO Phase 1 local Lambda-compatible ingest handler"
requires-python = ">=3.12"
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
cdo-ingest = "cdo_ingest.cli:main"
cdo-correlate = "cdo_correlator.cli:main"
cdo-build-evidence = "cdo_evidence_builder.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
